day 14 chapter 7 part 2

--- a/06-todo-app/index.html
+++ b/06-todo-app/index.html
@@ -9,11 +9,11 @@
 <body>
 
     <h1>Todo App</h1>
-    <p>Clean the kitched</p>
+    <!-- <p>Clean the kitched</p>
     <p>Book flights</p>
     <p>Research</p>
     <p>Go for a walk</p>
-    <p>Finish this Course</p>
+    <p>Finish this Course</p> -->
     <script src="todo-app.js"></script>
 </body>
 </html>
