day 15 chapter 7 part 3

--- a/05-notes-app/index.html
+++ b/05-notes-app/index.html
@@ -11,8 +11,11 @@
 <body>
     <h1>Notes App</h1>
     <h2>Take notes and never forget</h2>
-    <p>This application was created by me!</p>
-    <p>Other Paragraph</p>
+    <p class="note" >This application was created by me!</p>
+    <p class="note">Other Paragraph</p>
+    <button id="createNote" >Create Note</button>
+    <button id="removeNote" >Remove Note</button>
+    <button id="removeAllNote" >Remove All Note</button>
 
     <script src="notes-app.js"></script>
     <!-- // console.log('This is from my HTML doc') -->
