--- a/06-todo-app/index.html
+++ b/06-todo-app/index.html
@@ -14,6 +14,7 @@
     <p>Research</p>
     <p>Go for a walk</p>
     <p>Finish this Course</p> -->
+    <button id="addTodo" class="test" >Add Todo</button>
     <script src="todo-app.js"></script>
 </body>
 </html>
