day 16 chapter 7 part 4

--- a/06-todo-app/index.html
+++ b/06-todo-app/index.html
@@ -9,6 +9,7 @@
 <body>
 
     <h1>Todo App</h1>
+    <input id="todoText" type="text" placeholder="Search Todo">
     <!-- <p>Clean the kitched</p>
     <p>Book flights</p>
     <p>Research</p>
