--- a/05-notes-app/index.html
+++ b/05-notes-app/index.html
@@ -11,8 +11,12 @@
 <body>
     <h1>Notes App</h1>
     <h2>Take notes and never forget</h2>
-    <p class="note" >This application was created by me!</p>
-    <p class="note">Other Paragraph</p>
+    <input id="search-text" placeholder="Filter Notes" type="text">
+    <!-- <p class="note" >This application was created by me!</p>
+    <p class="note">Other Paragraph</p> -->
+    <div id="notes">
+        
+    </div>
     <button id="createNote" >Create Note</button>
     <button id="removeNote" >Remove Note</button>
     <button id="removeAllNote" >Remove All Note</button>
