day 17 chapter 7 part 5

--- a/06-todo-app/index.html
+++ b/06-todo-app/index.html
@@ -15,7 +15,11 @@
     <p>Research</p>
     <p>Go for a walk</p>
     <p>Finish this Course</p> -->
-    <button id="addTodo" class="test" >Add Todo</button>
+    <button id="addTodo" class="test" >Add Todo</button> <br>
+    <input id="search-text" type="text" placeholder="Filter Todo">
+    <div id="todos">
+
+    </div>
     <script src="todo-app.js"></script>
 </body>
 </html>
