--- a/05-notes-app/index.html
+++ b/05-notes-app/index.html
@@ -11,15 +11,33 @@
 <body>
     <h1>Notes App</h1>
     <h2>Take notes and never forget</h2>
+    <!-- <label>
+    Search: 
+    </label> -->
     <input id="search-text" placeholder="Filter Notes" type="text">
+    <select id="filter-by">
+        <option value="byEdited" >Sort by Last Edited</option>
+        <option value="byCreated" >Sort by recently added</option>
+        <option value="alphabetical" >Sort Alphabetically</option>
+    </select>
     <!-- <p class="note" >This application was created by me!</p>
     <p class="note">Other Paragraph</p> -->
     <div id="notes">
         
     </div>
     <button id="createNote" >Create Note</button>
-    <button id="removeNote" >Remove Note</button>
-    <button id="removeAllNote" >Remove All Note</button>
+    <!-- <button id="removeNote" >Remove Note</button> -->
+    <!-- <button id="removeAllNote" >Remove All Note</button> -->
+
+    <!-- <form id="name-form">
+        <input type="text" placeholder="First Name" name="firstName">
+        <button>Submit</button>
+    </form> -->
+
+    
+    <!-- <label>
+        <input id="for-fun" type="checkbox">Check me for fun
+    </label> -->
 
     <script src="notes-app.js"></script>
     <!-- // console.log('This is from my HTML doc') -->
