--- a/00-js-simple-programs/school-mark-system/index.html
+++ b/00-js-simple-programs/school-mark-system/index.html
@@ -4,17 +4,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/images/education.png" />
+    <link rel="apple-touch-icon" href="/images/education.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@10..48,300&family=Ubuntu:wght@300&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./styles/styles.css">
 
     <title>Simple School Mark Calc</title>
 </head>
 
 <body>
-    <div class="container">
-        <form>
+    <div class="container h-100 mt-5">
+        <div class="row">
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 m-auto shadow rounded">
+                <form onsubmit="" method="post">
+                    <h1 class="text-center mb-3">Student Mark Calc</h1>
+                    <label for="uid">Student ID</label>
+                    <input type="number" name="sid" id="sid" class="form-control mb-4" autofocus required>
 
-        </form>
+                    <label for="fullname">Full Name</label>
+                    <input type="text" name="fullname" id="fullname" class="form-control mb-4" required>
+
+                    <label for="emailAddress">Email Address</label>
+                    <input type="email" name="emailAddress" id="emailAddress" class="form-control mb-4" required>
+
+                    <label for="dateOfBirth">DOB</label>
+                    <input type="date" name="dateOfBirth" id="dateOfBirth" class="form-control mb-4" required>
+                    <div class="container mb-4">
+                        <div class="row ">
+                            <h5 class="mb-3">Please enter your respective marks</h5>
+                            <div class="col">
+                                <div class="form-floating mb-3">
+                                    <input type="number" class="form-control" placeholder="Lang">
+                                    <label for="floatingInput">Lang</label>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="form-floating mb-3">
+                                    <input type="number" class="form-control" placeholder="Eng">
+                                    <label for="floatingInput">Eng</label>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="form-floating mb-3">
+                                    <input type="number" class="form-control" placeholder="Math">
+                                    <label for="floatingInput">Math</label>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="form-floating mb-3">
+                                    <input type="number" class="form-control" placeholder="Sci">
+                                    <label for="floatingInput">Sci</label>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="form-floating mb-3">
+                                    <input type="number" class="form-control" placeholder="Soc">
+                                    <label for="floatingInput">Soc</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="h-100 d-flex align-items-center justify-content-center mb-5">
+                        <button class="btn btn-success me-4" type="button" onclick="calc()">Submit</button>
+                        <button class="btn btn-primary me-4" type="button" onclick="Refresh()">Display</button>
+                        <button class="btn btn-warning me-4" type="reset">Reset</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 </body>
 <script src="./js/index.js"></script>
