--- a/00-js-simple-programs/school-mark-system/index.html
+++ b/00-js-simple-programs/school-mark-system/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/images/education.png" />
-    <link rel="apple-touch-icon" href="/images/education.png" />
+    <link rel="icon"
+        href="https://github.com/AmuthesWaran/javascript-complete/assets/79437368/a9b535aa-317c-4031-b321-5a6db8befc78" />
+    <link rel="apple-touch-icon"
+        href="https://github.com/AmuthesWaran/javascript-complete/assets/79437368/a9b535aa-317c-4031-b321-5a6db8befc78" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,7 +31,7 @@
 
 
                     <label for="fullname">Full Name</label>
-                    <small id="fullnameErrorMsg"></small>
+                    <small class="text-danger" id="fullnameErrorMsg"></small>
                     <input type="text" name="fullname" id="fullname" class="form-control mb-4" required>
 
 
@@ -58,14 +60,17 @@
                                 <input type="number" class="form-control" id="english" required>
 
                             </div>
+
                             <div class="col">
                                 <label for="math">Math</label>
                                 <input type="number" class="form-control" id="math" required>
                             </div>
+
                             <div class="col">
                                 <label for="science">Sci</label>
                                 <input type="number" class="form-control" id="science" required>
                             </div>
+
                             <div class="col">
                                 <label for="social">Soc</label>
                                 <input type="number" class="form-control" id="social" required>
@@ -74,6 +79,9 @@
 
                         </div>
                     </div>
+            </div>
+            <div class="h-100 d-flex align-items-center justify-content-center mb-3">
+                <h5 class="text-success" id="successMsg"></h5>
             </div>
             <div class="h-100 d-flex align-items-center justify-content-center mb-5">
                 <button class="btn btn-success me-4" type="submit">Submit</button>
