--- a/00-js-simple-programs/simple-counter/index.html
+++ b/00-js-simple-programs/simple-counter/index.html
@@ -11,9 +11,11 @@
 </head>
 <div class="container h-100">
     <i id="counter" class="bi bi-chat-left" style="font-size: 4rem;"></i>
+    <p id="counterText">You have got 0 messages</p>
     <br>
     <button type="button" class="btn btn-outline-danger" onclick="sub()">-</button>
     <button type="button" class="btn btn-outline-success" onclick="add()">+</button>
+    <button type="button" class="btn btn-outline-success" onclick="clearAll()">clear all</button>
 
 </div>
 
