table render done data to be cheched

--- a/00-js-simple-programs/school-mark-system/index.html
+++ b/00-js-simple-programs/school-mark-system/index.html
@@ -85,12 +85,14 @@
             </div>
             <div class="h-100 d-flex align-items-center justify-content-center mb-5">
                 <button class="btn btn-success me-4" type="submit">Submit</button>
-                <button class="btn btn-primary me-4" type="button" onclick="Refresh()">Refresh</button>
+                <button class="btn btn-primary me-4" type="button" onclick="refresh()">Refresh</button>
                 <button class="btn btn-warning me-4" type="reset">Reset</button>
             </div>
             </form>
         </div>
-    </div>
+        <br>
+        <br>
+        <table id="tableRender" class="table"> </table>
     </div>
 </body>
 <script src="./js/index.js"></script>
