--- a/00-js-simple-programs/school-mark-system/index.html
+++ b/00-js-simple-programs/school-mark-system/index.html
@@ -89,6 +89,12 @@
                 <button class="btn btn-primary me-4" type="button" onclick="refresh()">Refresh</button>
                 <button class="btn btn-warning me-4" type="reset">Reset</button>
             </div>
+            <!-- <table>
+                <th>Hello</th>
+                <tr>
+                    <td bgcolor="red">Hello2</td>
+                </tr>
+            </table> -->
             <!-- </form> -->
         </div>
         <br>
