--- a/00-js-simple-programs/school-mark-system/index.html
+++ b/00-js-simple-programs/school-mark-system/index.html
@@ -23,7 +23,7 @@
 <body>
     <div class="container h-100 mt-5">
         <div class="row col-xl-6 col-lg-6 col-md-8 col-sm-12 m-auto shadow rounded">
-            <div class="">
+            <div>
                 <!-- <form> -->
                 <h1 class="text-center mb-3">Student Mark Calc</h1>
                 <label for="uid">Student ID</label>
